--- a/MNIST_model.ipynb
+++ b/MNIST_model.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNxTMWBOMO6+Va8CUeZ+HF6",
+      "authorship_tag": "ABX9TyNBjBjDHU7ykzw3cULKAu1g",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,13 +28,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 1,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "2hS2p7uUTG6S",
-        "outputId": "382c1556-62c9-49e4-c03e-3aa015b50f33"
+        "outputId": "d9a76e91-3498-4777-ccd5-31ac5d24cd86"
       },
       "outputs": [
         {
@@ -45,7 +45,7 @@
             "Requirement already satisfied: jaxlib in /usr/local/lib/python3.10/dist-packages (0.4.26+cuda12.cudnn89)\n",
             "Collecting dm-haiku\n",
             "  Downloading dm_haiku-0.0.12-py3-none-any.whl (371 kB)\n",
-            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m371.7/371.7 kB\u001b[0m \u001b[31m6.4 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m371.7/371.7 kB\u001b[0m \u001b[31m4.1 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
             "\u001b[?25hRequirement already satisfied: optax in /usr/local/lib/python3.10/dist-packages (0.2.2)\n",
             "Requirement already satisfied: tensorflow-datasets in /usr/local/lib/python3.10/dist-packages (4.9.6)\n",
             "Requirement already satisfied: ml-dtypes>=0.2.0 in /usr/local/lib/python3.10/dist-packages (from jax) (0.2.0)\n",
@@ -137,14 +137,16 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "6TsL3MTwc_TC",
-        "outputId": "06cc8057-c939-4199-90b6-c3d1ecb19b3e"
+        "outputId": "65bd7524-c772-4958-cfee-6b561c0e6adf"
       },
-      "execution_count": 12,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
+            "Downloading data from https://storage.googleapis.com/tensorflow/tf-keras-datasets/mnist.npz\n",
+            "11490434/11490434 [==============================] - 0s 0us/step\n",
             "(54000, 28, 28)\n",
             "(54000,)\n",
             "<class 'jaxlib.xla_extension.ArrayImpl'>\n",
@@ -188,7 +190,7 @@
       "metadata": {
         "id": "AHI6MWoYa1z6"
       },
-      "execution_count": 13,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -203,7 +205,7 @@
       "metadata": {
         "id": "5xmjubRzgFcZ"
       },
-      "execution_count": 14,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -216,7 +218,7 @@
       "metadata": {
         "id": "ODZbMitfgwhv"
       },
-      "execution_count": 15,
+      "execution_count": 5,
       "outputs": []
     },
     {
@@ -231,9 +233,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "7P22ynvHxClR",
-        "outputId": "cd239b06-c4a2-44a0-9454-12194cde25a1"
+        "outputId": "eec9350d-e97e-4e7f-edda-b1013715a22f"
       },
-      "execution_count": 21,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
@@ -249,23 +251,20 @@
     {
       "cell_type": "code",
       "source": [
-        "import math\n",
         "\n",
         "def loss_fn(params, x, y):\n",
         "    predictions = forward.apply(params, None, x)\n",
         "    batch_sz = predictions.shape[0]\n",
-        "    sum = 0\n",
-        "    for i in range(batch_sz):\n",
-        "        label = y[i].astype(int)\n",
         "\n",
-        "        sum = sum + jnp.log(predictions[i][label])\n",
+        "    log_probs = jnp.log(predictions[jnp.arange(batch_sz), y.astype(int)])\n",
+        "    loss = -jnp.mean(log_probs)\n",
         "\n",
-        "    return -sum/batch_sz\n"
+        "    return loss\n"
       ],
       "metadata": {
         "id": "1Kgm4fXPtrgr"
       },
-      "execution_count": 23,
+      "execution_count": 7,
       "outputs": []
     },
     {
@@ -281,9 +280,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "4DFFug1wagDe",
-        "outputId": "2c061491-3471-435a-d951-815c5ac4681a"
+        "outputId": "6ca66f74-957e-47e3-989f-0c21f5b66b7e"
       },
-      "execution_count": 30,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "stream",
@@ -326,76 +325,62 @@
         "\n",
         "        params, opt_state = update(params, opt_state, x_batch, y_batch)\n",
         "\n",
-        "        if batch_idx % 100 == 0:\n",
-        "            prediction = forward.apply(params,None,x_batch)\n",
-        "            accuracy = jnp.mean(jnp.argmax(prediction, axis=-1) == y_batch)\n",
-        "            print(\"Accuracy: \")\n",
-        "            print(accuracy)\n",
+        "        if batch_idx % 10000 == 0:\n",
+        "            prediction1 = forward.apply(params,None,x_batch)\n",
+        "            accuracy1 = jnp.mean(jnp.argmax(prediction1, axis=-1) == y_batch)\n",
+        "            print(f\"Training Accuracy: {accuracy1}\")\n",
+        "\n",
         "            train_loss = loss_fn(params, x_batch, y_batch)\n",
         "            val_loss = loss_fn(params, x_val, y_val)\n",
         "\n",
+        "            prediction2 = forward.apply(params,None,x_val)\n",
+        "            accuracy2 = jnp.mean(jnp.argmax(prediction2, axis=-1) == y_val)\n",
+        "            print(f\"Validation Accuracy: {accuracy2}\")\n",
         "\n",
         "            print(f\"Epoch {epoch+1}/{num_epochs}, Batch {batch_idx}/{num_batches}, Train Loss: {train_loss}, Val Loss: {val_loss}\")\n",
+        "            print(\" \")\n",
         "\n",
         "test_loss = loss_fn(params, x_test, y_test)\n",
         "print(f\"Test Loss: {test_loss}\")"
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 843
+          "base_uri": "https://localhost:8080/"
         },
         "id": "eqDGlcIJgEcp",
-        "outputId": "9b64e43a-ed2f-49f1-f33e-79220a92f905"
+        "outputId": "8017605b-9800-4c83-f9eb-016080d963ab"
       },
-      "execution_count": 28,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Accuracy: \n",
-            "1.0\n",
-            "Epoch 1/1, Batch 0/54000, Train Loss: 0.021468909457325935, Val Loss: 0.1571112424135208\n",
-            "Accuracy: \n",
-            "1.0\n",
-            "Epoch 1/1, Batch 100/54000, Train Loss: 0.03524559363722801, Val Loss: 0.14852117002010345\n",
-            "Accuracy: \n",
-            "0.96875\n",
-            "Epoch 1/1, Batch 200/54000, Train Loss: 0.13498039543628693, Val Loss: 0.15915970504283905\n",
-            "Accuracy: \n",
-            "0.984375\n",
-            "Epoch 1/1, Batch 300/54000, Train Loss: 0.058817241340875626, Val Loss: 0.13168548047542572\n",
-            "Accuracy: \n",
-            "0.9375\n",
-            "Epoch 1/1, Batch 400/54000, Train Loss: 0.22844427824020386, Val Loss: 0.13621315360069275\n",
-            "Accuracy: \n",
-            "1.0\n",
-            "Epoch 1/1, Batch 500/54000, Train Loss: 0.03560644015669823, Val Loss: 0.11376401036977768\n",
-            "Accuracy: \n",
-            "0.953125\n",
-            "Epoch 1/1, Batch 600/54000, Train Loss: 0.08900947123765945, Val Loss: 0.11280450224876404\n",
-            "Accuracy: \n",
-            "0.984375\n",
-            "Epoch 1/1, Batch 700/54000, Train Loss: 0.05749135836958885, Val Loss: 0.12777554988861084\n",
-            "Accuracy: \n",
-            "0.984375\n",
-            "Epoch 1/1, Batch 800/54000, Train Loss: 0.036359671503305435, Val Loss: 0.11517132818698883\n"
-          ]
-        },
-        {
-          "output_type": "error",
-          "ename": "ZeroDivisionError",
-          "evalue": "division by zero",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mZeroDivisionError\u001b[0m                         Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-28-25255185379a>\u001b[0m in \u001b[0;36m<cell line: 18>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     23\u001b[0m         \u001b[0my_batch\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0my_train\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mstart_idx\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0mend_idx\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     24\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 25\u001b[0;31m         \u001b[0mparams\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mopt_state\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mupdate\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mparams\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mopt_state\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mx_batch\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my_batch\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     26\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     27\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mbatch_idx\u001b[0m \u001b[0;34m%\u001b[0m \u001b[0;36m100\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "    \u001b[0;31m[... skipping hidden 11 frame]\u001b[0m\n",
-            "\u001b[0;32m<ipython-input-28-25255185379a>\u001b[0m in \u001b[0;36mupdate\u001b[0;34m(params, opt_state, x, y)\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[0;34m@\u001b[0m\u001b[0mjax\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mjit\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[0;32mdef\u001b[0m \u001b[0mupdate\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mparams\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mopt_state\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mx\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 8\u001b[0;31m     \u001b[0mgrads\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mjax\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mgrad\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mloss_fn\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mparams\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mx\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      9\u001b[0m     \u001b[0mupdates\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mopt_state\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0moptimizer\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mupdate\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mgrads\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mopt_state\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     10\u001b[0m     \u001b[0mnew_params\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0moptax\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mapply_updates\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mparams\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mupdates\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "    \u001b[0;31m[... skipping hidden 10 frame]\u001b[0m\n",
-            "\u001b[0;32m<ipython-input-23-ddd3569bb514>\u001b[0m in \u001b[0;36mloss_fn\u001b[0;34m(params, x, y)\u001b[0m\n\u001b[1;32m     10\u001b[0m         \u001b[0msum\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0msum\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0mjnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlog\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mpredictions\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mlabel\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     11\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 12\u001b[0;31m     \u001b[0;32mreturn\u001b[0m \u001b[0;34m-\u001b[0m\u001b[0msum\u001b[0m\u001b[0;34m/\u001b[0m\u001b[0mbatch_sz\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-            "\u001b[0;31mZeroDivisionError\u001b[0m: division by zero"
+            "Training Accuracy: 1.0\n",
+            "Validation Accuracy: 0.9646666646003723\n",
+            "Epoch 1/1, Batch 0/54000, Train Loss: 0.005530150607228279, Val Loss: 0.11485996097326279\n",
+            " \n",
+            "Training Accuracy: nan\n",
+            "Validation Accuracy: 0.903499960899353\n",
+            "Epoch 1/1, Batch 10000/54000, Train Loss: nan, Val Loss: 0.31404629349708557\n",
+            " \n",
+            "Training Accuracy: nan\n",
+            "Validation Accuracy: 0.903499960899353\n",
+            "Epoch 1/1, Batch 20000/54000, Train Loss: nan, Val Loss: 0.31404629349708557\n",
+            " \n",
+            "Training Accuracy: nan\n",
+            "Validation Accuracy: 0.903499960899353\n",
+            "Epoch 1/1, Batch 30000/54000, Train Loss: nan, Val Loss: 0.31404629349708557\n",
+            " \n",
+            "Training Accuracy: nan\n",
+            "Validation Accuracy: 0.903499960899353\n",
+            "Epoch 1/1, Batch 40000/54000, Train Loss: nan, Val Loss: 0.31404629349708557\n",
+            " \n",
+            "Training Accuracy: nan\n",
+            "Validation Accuracy: 0.903499960899353\n",
+            "Epoch 1/1, Batch 50000/54000, Train Loss: nan, Val Loss: 0.31404629349708557\n",
+            " \n",
+            "Test Loss: 0.29886120557785034\n"
           ]
         }
       ]
@@ -403,6 +388,8 @@
     {
       "cell_type": "code",
       "source": [
+        "# Checking for some samples\n",
+        "\n",
         "num_samples = 5  # Number of test cases to show predictions for\n",
         "for i in range(num_samples):\n",
         "    x_sample = x_test[i:i+1]\n",
@@ -416,9 +403,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "SNjAVFkhmCiG",
-        "outputId": "691bc794-3ce1-4c1a-dad0-826af61ef421"
+        "outputId": "3fbf8f38-edf4-4c3b-ee44-33e21b807a63"
       },
-      "execution_count": 25,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "stream",
